# audiobook-tts

./: .gitignore  README.md  alembic.ini  audiobook_core.db.backup  main.py  migrate.py  patch.py  patch_backend.py  patch_narrator.py  pyproject.toml  test_accent.py  test_chunker.py  test_crud.py  test_db.py  test_endpoints.py  test_gemini.py  test_ml_chunker.py  test_preprocessor.py  test_preprocessor_live.py  test_projects.py  test_put.py  test_regex.py  test_templater.py
alembic/: env.py
alembic/versions/: 1d70e0c3b7ff_add_pitch_override_to_character.py  27508406486d_add_settings_and_apikey_tables.py  4ac6e26860a5_add_sample_audio_url_to_character.py  4e05a0f7a7eb_add_alias_to_projectcharacterlink.py  715a85389e44_initial.py  73663a0b4429_add_gender_and_age_category_to_character.py  982e1e553b06_add_raw_text_to_scene.py  98ed14fde0f4_add_scenes_and_scenelines.py  bc60f24b6715_add_project_entity.py  bdd37eac4097_add_character_language_profiles.py  d544d5cd3378_add_scene_status.py  dff04ad79fd4_pivot_to_gemini_replace_pitch_and_speed_.py
api/v1/: router.py
api/v1/routes/: characters.py  dictionary.py  processing.py  projects.py  scenes.py  settings.py
core/: audio_utils.py  file_parser.py  gemini_client.py  ml_text_chunker.py  preprocessor.py  templater.py  text_chunker.py
db/: crud.py  database.py  models.py
docs/: gemini_tts_api.md  script_extractor_models.md
prompts/: character_discoverer.md  script_extractor.md
scripts/: migrate_storage_path.py
templates/: audio_tag.xml.j2
