[project]
name = "audiobook-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "fastembed>=0.8.0",
    "google-genai>=2.7.0",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "ruaccent>=1.5.8.3",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]
